Flow Decomposition: split best case from N-1
Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>