@@ -69,7 +69,7 @@ public class XnecProvider5percPtdf implements XnecProvider {
 
     @Override
     public Map<String, List<Branch>> getNetworkElementsPerContingency(Network network) {
-        return Map.of(NO_CONTINGENCY_ID, getNetworkElements(network));
+        return Collections.emptyMap();
     }
 
     @Override
